samples/_failures_safe/1761292406_c2c091_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bdde5ae.c: In function ‘main’:
./samples/SAFE/__tmp_5bdde5ae.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
